# payfake-python

./: .gitignore  README.md  pyproject.toml
example/: main.py
payfake/: __init__.py  auth.py  charge.py  client.py  control.py  customer.py  errors.py  merchant.py  transaction.py  types.py
