[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "payfake"
version = "1.0.0"
description = "Official Python SDK for Payfake — Paystack-compatible payment simulator"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = ["httpx>=0.27"]
keywords = ["payfake", "paystack", "payments", "ghana", "africa", "simulator"]

[project.urls]
Homepage = "https://payfake.co"
Repository = "https://github.com/payfake/payfake-python"
